# lucyna_bot

./: .env.example  README.md  bot_main.py  pyproject.toml  run.py
app/: bot_main.py  config.py
app/cogs/: collection.py  roll.py
app/embeds/: collection_embed.py
app/views/: collection_view.py  roll_view.py
